# surprise_optitrack

./: .gitignore  CMakeLists.txt  README.txt  package.xml
scripts/: DataTrack.py  collections  filter.py  plot_optitrack.py  relative_person_node.py  rospy  smooth_optitrack.py  surprise_node.py  utils.py  utils_bis.py
